trying to get ssh access working

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -1,6 +1,6 @@
 ---
-- hosts: all
-  gather_facts: true
+- hosts: aws_ec2
+  gather_facts: False
   vars: 
     prometheus_version: "2.45.0"
     grafana_version: "10.0.3-1"
@@ -8,15 +8,22 @@
   #   - prometheus
   #   - grafana
   pre_tasks:
-    - name: Wait for SSH port to be open
-      wait_for:
-        host: "{{ ansible_host }}"
-        port: 22
-        delay: 15
-        timeout: 300
-    - name: Print host info
-      debug:
-       var: ansible_host
+    - name: Get a session token
+      community.aws.sts_session_token:
+        access_key: "{{ lookup('ansible.builtin.env', 'AWS_ACCESS_KEY_ID') }}"
+        secret_key: "{{ lookup('ansible.builtin.env', 'AWS_SECRET_ACCESS_KEY') }}"
+        duration_seconds: 3600
+      register: session_credentials
+
+    # - name: Wait for SSH port to be open
+    #   wait_for:
+    #     host: "{{ ansible_host }}"
+    #     port: 22
+    #     delay: 15
+    #     timeout: 300
+    # - name: Print host info
+    #   debug:
+    #    var: ansible_host
   # post_tasks:
   #   - systemd:
   #       daemon_reexec: true
